tests/disabled/neg/jdk-9-app.check
-- [E008] Not Found Error: tests/neg-custom-args/jdk-9-app.scala:1:17 --------------------------------------------------
1 |import java.lang.ProcessHandle // error: not a member
  |                 ^^^^^^^^^^^^^
  |                 value ProcessHandle is not a member of java.lang
-- [E006] Not Found Error: tests/neg-custom-args/jdk-9-app.scala:4:10 --------------------------------------------------
4 |  println(ProcessHandle.current().pid()) // error: not found
  |          ^^^^^^^^^^^^^
  |          Not found: ProcessHandle
  |
  | longer explanation available when compiling with `-explain`
